--- a/AstraAI/templates/index.html
+++ b/AstraAI/templates/index.html
@@ -3,15 +3,250 @@
   <head>
     <meta charset="utf-8">
     <title>ASTRA AI</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+	<style>
+	
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-size:12.5px;
+}
+body {
+  background: transparent;
+}
+.chatbot-toggler {
+  position: fixed;
+  bottom: 30px;
+  right: 35px;
+  outline: none;
+  border: none;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background: #245CAD;
+  transition: all 0.2s ease;
+}
+body.show-chatbot .chatbot-toggler img {
+  display: none;
+}
+body.show-chatbot .chatbot-toggler {
+  transform: none;
+}
+.chatbot-toggler span {
+  color: #fff;
+  position: absolute;
+}
+.chatbot-toggler span:last-child,
+body.show-chatbot .chatbot-toggler span:first-child  {
+  opacity: 0;
+}
+body.show-chatbot .chatbot-toggler span:last-child {
+  opacity: 1;
+}
+.chatbot {
+  position: fixed;
+  right: 35px;
+  bottom: 80px;
+  width: calc(25vw - 20px);
+ // width: 350px;
+  background: #fff;
+  border-radius: 15px;
+  overflow: hidden;
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(0.5);
+  transform-origin: bottom right;
+  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
+              0 32px 64px -48px rgba(0,0,0,0.5);
+  transition: all 0.1s ease;
+  box-shadow: 10px 10px 16px black;
+}
+body.show-chatbot .chatbot {
+  opacity: 1;
+  pointer-events: auto;
+  transform: scale(1);
+}
+.chatbot header {
+  padding: 6px 0;
+  position: relative;
+  text-align: center;
+  color: #fff;
+  background: #245CAD;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+.chatbot header span {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  display: none;
+  cursor: pointer;
+  transform: translateY(-50%);
+}
+header h2 {
+  font-size: 1.4rem;
+}
+.chatbot .chatbox {
+  overflow-y: auto;
+  height: calc(60vh - 20px);
+//  height: 410px;
+
+  padding: 30px 20px 50px;
+}
+.chatbot :where(.chatbox, textarea)::-webkit-scrollbar {
+  width: 6px;
+}
+.chatbot :where(.chatbox, textarea)::-webkit-scrollbar-track {
+  background: #fff;
+  border-radius: 25px;
+}
+.chatbot :where(.chatbox, textarea)::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 25px;
+}
+.chatbox .chat {
+  display: flex;
+  list-style: none;
+}
+.chatbox .outgoing {
+  margin: 20px 0;
+  justify-content: flex-end;
+}
+.chatbox .incoming span {
+  width: 32px;
+  height: 32px;
+  color: #fff;
+  cursor: default;
+  text-align: center;
+  line-height: 32px;
+  align-self: flex-end;
+  background: #245CAD;
+  border-radius: 4px;
+  margin: 0 10px 7px 0;
+}
+.chatbox .chat p {
+  white-space: pre-wrap;
+  padding: 12px 16px;
+  border-radius: 10px 10px 0 10px;
+  max-width:max-content;
+  color: #fff;
+  font-size: 0.95rem;
+  background: #245CAD;
+}
+.chatbox .incoming p {
+  border-radius: 10px 10px 10px 0;
+}
+.chatbox .chat p.error {
+  color: #721c24;
+  background: #f8d7da;
+}
+.chatbox .incoming p {
+  color: #000;
+  background: #f2f2f2;
+}
+.chatbot .chat-input {
+  display: flex;
+  gap: 5px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #fff;
+  padding: 3px 20px;
+  border-top: 1px solid #ddd;
+}
+.chat-input textarea {
+  height: 30px;
+  width: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  overflow: hidden;
+  max-height: 180px;
+  padding: 10px 15px 5px 0;
+  font-size: 0.95rem;
+}
+.chat-input button {
+  align-self: flex-end;
+  color: #245CAD;
+  cursor: pointer;
+  height: 50px;
+  padding-bottom:20px;
+  display: flex;
+  align-items: center;
+ 
+  font-size: 1.35rem;
+}
+.chat-input textarea:valid ~ span {
+  visibility: visible;
+}
+
+@media (max-width: 490px) {
+  .chatbot-toggler {
+    right: 20px;
+    bottom: 20px;
+  }
+  .chatbot {
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    border-radius: 0;
+    width: 100%;
+  }
+  .chatbot .chatbox {
+    height: 90%;
+    padding: 25px 15px 100px;
+  }
+  .chatbot .chat-input {
+    padding: 5px 15px;
+  }
+  .chatbot header span {
+    display: block;
+  }
+}
+
+
+  
+
+
+.chatbox .chat .message-container .timestamp {
+  font-size: 0.8rem;
+  color: #888;
+  margin-top: 4px;
+  background-color: #fff;
+} 
+
+
+
+#logo {
+  width: 160px;
+  padding: 10px;
+  margin: 0 auto;
+  display: block;
+}
+
+.powered-by{
+      position: relative;
+      z-index: 1;
+      text-align:right;
+      margin-bottom: 2px;
+    }
+	
+
+	</style>
   </head>
   <body>
     <button class="chatbot-toggler">
-     <img class="chatbot-toggler" src="{{ url_for('static', filename='9.png') }}">
+     <img class="chatbot-toggler" src="static/astra2.gif">
       <span class="material-symbols-outlined">close</span>
     </button>
     <div class="chatbot">
@@ -19,13 +254,13 @@
 <!--        <h2>ASTRA AI</h2>-->
         <span class="close-btn material-symbols-outlined">close</span>
       </header>
-      <div>
-        <img id="logo" src="{{ url_for('static', filename='logo.png') }}" alt="Description of the image">
-      <p style="text-align: center;">Greetings from Aruvi</p>
+      <div >
+        <img id="logo" src="https://ai-test.astralinx.com/static/logo.png" alt="Description of the image"  >
+      <p style="text-align: center;font-size: small;">Welcome to Astralinx AI</p>
       </div>
 
       <ul class="chatbox">
-        <li class="chat incoming" style="padding-top: 20px; padding-bottom: 20px;">
+        <li class="chat incoming" style="padding-top: 10px; padding-bottom: 10px;">
 <!--          <span ><img src="{{ url_for('static', filename='AIlogo3.png') }}" width="22px" height="25px"></span>-->
 <!--          <p>Welcome to Astralinx AI Support<br>We are glad to serve you in online!</p>-->
 <!--          -->
@@ -47,11 +282,180 @@
         <!-- </form> -->
       <!-- </div> -->
 
-<!--      <div class="powered-by">
-      <h5 style="color:#245CAD;padding-right:10px;">Powered by Gemini <img class="img-fluid" src="{{ url_for('static', filename='Geminilogo.png') }}" width="15px" height="15px"></h5>
+      <div class="powered-by">
+      <h5 style="color:#245CAD;padding-right:10px;font-size:smaller;">Powered by Gemini <img class="img-fluid" src="https://ai-test.astralinx.com/static/Geminilogo.png" width="12px" height="12px"></h5>
       </div>
 
-    </div> -->
-	<script src="{{ url_for('static', filename='script.js') }}"></script>
+    </div>
+	<script >
+	document.addEventListener('DOMContentLoaded', function () {
+    const chatbotToggler = document.querySelector(".chatbot-toggler");
+    const closeBtn = document.querySelector(".close-btn");
+    const chatbox = document.querySelector(".chatbox");
+    const chatInput = document.querySelector(".chat-input textarea");
+    const sendChatBtn = document.querySelector(".chat-input button");
+
+    const inputInitHeight = chatInput.scrollHeight;
+
+    const createChatLi = (message, className) => {
+        const chatLi = document.createElement("li");
+        chatLi.classList.add("chat", `${className}`);
+
+// Create logo
+    const logoImg = document.createElement("img");
+    if (isOutgoing) {
+        logoImg.src = "{{ url_for('static', filename='person.png') }}";
+        logoImg.alt = "Outgoing Logo";
+        logoImg.classList.add("logo", "outgoing-logo");
+        logoImg.width = 2; // Set the width to 50px
+        logoImg.height = 2;
+        // Set the height to 50px
+    } else {
+        logoImg.src = "{{ url_for('static', filename='Ailogo3.png') }}";
+        logoImg.alt = "Incoming Logo";
+        logoImg.classList.add("logo", "incoming-logo");
+        logoImg.width = 2; // Set the width to 30px
+        logoImg.height = 2;
+        logoImg.style.backgroundColor = "#fff" // Set the height to 30px
+    }
+    chatLi.appendChild(logoImg);
+
+        // Create message container
+        const messageContainer = document.createElement("div");
+        messageContainer.classList.add("message-container");
+
+        // Create message content
+        const messageContent = document.createElement("p");
+        messageContent.textContent = message;
+
+            // Add "you:" text for outgoing messages
+    if (isOutgoing) {
+        const youText = document.createElement("span");
+        youText.textContent = " "+" " + "You: ";
+        youText.classList.add("you-text");
+        messageContainer.appendChild(youText);
+    }
+    else{
+        const youText = document.createElement("span");
+        youText.textContent = " Astra AI: ";
+        youText.classList.add("you-text");
+        messageContainer.appendChild(youText);
+    }
+
+        // Create timestamp
+        const timestamp = new Date().toLocaleString('en-US', { hour: 'numeric', minute: 'numeric', hour12: true });
+        const timestampSpan = document.createElement("span");
+        timestampSpan.classList.add("timestamp");
+        timestampSpan.textContent = timestamp;
+
+        // Append message content and timestamp to message container
+        messageContainer.appendMessage(messageContent);
+        messageContainer.appendMessage(timestampSpan);
+
+        chatLi.appendMessage(messageContainer);
+
+        return chatLi;
+    };
+
+    const appendMessage = (sender, message, className) => {
+        const messageElement = document.createElement('div');
+        messageElement.classList.add('message');
+
+        // Get current timestamp
+        const timestamp = new Date().toLocaleString('en-US', { hour: 'numeric', minute: 'numeric', hour12: true });
+
+        let imageSrc;
+        let altText;
+		if (sender === 'Astra AI' && message.includes('loading4.gif')) {
+            messageElement.innerHTML = `<img src="static/astra.png"  width="20px" height="20px" style="vertical-align:middle" >&nbsp;&nbsp;<strong style="vertical-align:middle">${sender}<br></strong><div style="padding-left: 28px;padding-bottom:8px;padding-top:8px;">${message}</div>`;
+	//	alert("output");
+		}
+         else if (sender ==='Astra AI') {
+            const timestamp = new Date().toLocaleString('en-US', { hour: 'numeric', minute: 'numeric', hour12: true });
+            messageElement.innerHTML = `<img src="static/astra.png"  width="20px" height="20px" style="vertical-align:middle" >&nbsp;&nbsp;<strong style="vertical-align:middle">${sender}<br></strong><div style="padding-left: 28px;padding-bottom:8px;padding-top:8px;">${message}</div><div style="padding-left: 30px; padding-bottom:8px; padding-top:8px; text-align: right; font-size: 10px; important!">${timestamp}</div><br>`;        
+	//	alert("output2");
+		}
+		
+          else {
+            const timestamp = new Date().toLocaleString('en-US', { hour: 'numeric', minute: 'numeric', hour12: true });
+            messageElement.innerHTML = `<img src="https://ai-test.astralinx.com/static/person.png"  width="20px" height="20px" style="vertical-align:middle" >&nbsp;&nbsp;<strong style="vertical-align:middle">${sender}<br></strong><div style="padding-left: 28px;padding-bottom:8px;padding-top:8px;">${message}</div><div style="padding-left: 30px; padding-bottom:8px; padding-top:8px; text-align: right; font-size: 10px; important!">${timestamp}</div><br>`;    
+		}
+  
+        chatbox.appendChild(messageElement);
+        chatbox.scrollTop = chatbox.scrollHeight;
+    };
+
+
+
+    const handleChat = () => {
+        const userMessage = chatInput.value.trim();
+        if (!userMessage) return;
+
+        chatInput.value = "";
+        chatInput.style.height = `${inputInitHeight}px`;
+		 chatInput.disabled = true;
+		 sendChatBtn.disabled = true;
+		 chatInput.placeholder = "Please wait...";
+		  
+		//	alert("Handlechat input meassage");
+//        chatbox.appendChild(createChatLi(userMessage, "outgoing"));
+//        chatbox.scrollTo(0, chatbox.scrollHeight);
+
+          appendMessage('You', userMessage,"Outgoing");
+        appendMessage('Astra AI', '<img src="https://ai-test.astralinx.com/static/loading4.gif" alt="Loading..."  style="padding-left:4px" >', "Incoming");
+	//	alert("Handlechat output meassage");
+ 
+        // Send POST request to Python backend
+        fetch('https://ai-test.astralinx.com/', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ message: userMessage }),
+        })
+            .then(response => response.json())
+            .then(data => {
+                const botResponse = data.response;
+                // Remove the loading GIF and display the Astra AI message
+                chatbox.removeChild(chatbox.lastChild); // Remove the last child (which is the loading GIF)
+                appendMessage('Astra AI', botResponse, "Incoming");
+				  chatInput.disabled = false;
+				  sendChatBtn.disabled = false;
+				  chatInput.placeholder = "Ask me about Astralinx";
+            })
+            .catch(error => {
+                console.error('Error:', error);
+				 chatInput.disabled = false;
+				 sendChatBtn.disabled = false;
+				 chatInput.placeholder = "Ask me about Astralinx";
+            });
+		//	alert("Handlechat final meassage");
+    };
+
+
+    chatInput.addEventListener("input", () => {
+        chatInput.style.height = `${inputInitHeight}px`;
+        chatInput.style.height = `${chatInput.scrollHeight}px`;
+    });
+
+    chatInput.addEventListener("keydown", (e) => {
+        if (e.key === "Enter") {
+            e.preventDefault();
+            handleChat();}
+    });
+
+    sendChatBtn.addEventListener("click", handleChat);
+//	sendChatBtn.addEventListener("click", function() {
+    // Disable the button to prevent multiple clicks
+   
+    // Call the handleChat function
+ //   handleChat();	
+	
+//	});
+    closeBtn.addEventListener("click", () => document.body.classList.remove("show-chatbot"));
+    chatbotToggler.addEventListener("click", () => document.body.classList.toggle("show-chatbot"));
+});
+
+	</script>
   </body>
 </html>
