--- a/AstraAI/templates/index.html
+++ b/AstraAI/templates/index.html
@@ -255,7 +255,7 @@ header h2 {
         <span class="close-btn material-symbols-outlined">close</span>
       </header>
       <div >
-        <img id="logo" src="https://ai-test.astralinx.com/static/logo.png" alt="Description of the image"  >
+        <img id="logo" src="https://ai-test.astralinx.us/static/logo.png" alt="Description of the image"  >
       <p style="text-align: center;font-size: small;">Welcome to Astralinx AI</p>
       </div>
 
@@ -283,7 +283,7 @@ header h2 {
       <!-- </div> -->
 
       <div class="powered-by">
-      <h5 style="color:#245CAD;padding-right:10px;font-size:smaller;">Powered by Gemini <img class="img-fluid" src="https://ai-test.astralinx.com/static/Geminilogo.png" width="12px" height="12px"></h5>
+      <h5 style="color:#245CAD;padding-right:10px;font-size:smaller;">Powered by Gemini <img class="img-fluid" src="https://ai-test.astralinx.us/static/Geminilogo.png" width="12px" height="12px"></h5>
       </div>
 
     </div>
@@ -378,7 +378,7 @@ header h2 {
 		
           else {
             const timestamp = new Date().toLocaleString('en-US', { hour: 'numeric', minute: 'numeric', hour12: true });
-            messageElement.innerHTML = `<img src="https://ai-test.astralinx.com/static/person.png"  width="20px" height="20px" style="vertical-align:middle" >&nbsp;&nbsp;<strong style="vertical-align:middle">${sender}<br></strong><div style="padding-left: 28px;padding-bottom:8px;padding-top:8px;">${message}</div><div style="padding-left: 30px; padding-bottom:8px; padding-top:8px; text-align: right; font-size: 10px; important!">${timestamp}</div><br>`;    
+            messageElement.innerHTML = `<img src="https://ai-test.astralinx.us/static/person.png"  width="20px" height="20px" style="vertical-align:middle" >&nbsp;&nbsp;<strong style="vertical-align:middle">${sender}<br></strong><div style="padding-left: 28px;padding-bottom:8px;padding-top:8px;">${message}</div><div style="padding-left: 30px; padding-bottom:8px; padding-top:8px; text-align: right; font-size: 10px; important!">${timestamp}</div><br>`;    
 		}
   
         chatbox.appendChild(messageElement);
@@ -402,11 +402,11 @@ header h2 {
 //        chatbox.scrollTo(0, chatbox.scrollHeight);
 
           appendMessage('You', userMessage,"Outgoing");
-        appendMessage('Astra AI', '<img src="https://ai-test.astralinx.com/static/loading4.gif" alt="Loading..."  style="padding-left:4px" >', "Incoming");
+        appendMessage('Astra AI', '<img src="https://ai-test.astralinx.us/static/loading4.gif" alt="Loading..."  style="padding-left:4px" >', "Incoming");
 	//	alert("Handlechat output meassage");
  
         // Send POST request to Python backend
-        fetch('https://ai-test.astralinx.com/', {
+        fetch('https://ai-test.astralinx.us/', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
